<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

  <LinearLayout
      android:id="@+id/ll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_margin="16dp">

      <ImageView
          android:id="@+id/profile"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:background="@drawable/bg_profile"
          android:contentDescription="@string/fotopp"
          android:scaleType="centerCrop"
          android:src="@drawable/pp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="16sp"
        android:layout_margin="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_telp"
        android:textSize="16sp"
        android:layout_margin="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:letterSpacing="0.02"
        android:text="@string/txt_desc"
        android:textSize="12sp"
        android:justificationMode="inter_word"
        android:layout_margin="6dp"/>
  </LinearLayout>




  </androidx.constraintlayout.widget.ConstraintLayout>